[package]
name = "guard-agent-rs"
version = "0.0.1"
edition = "2024"
description = "Telemetry and monitoring agent for the guard ecosystem. Part of the guard ecosystem. WIP."
license = "MIT"
repository = "https://github.com/rennf93/guard-agent-rs"
readme = "README.md"
keywords = ["security", "telemetry", "monitoring"]
categories = ["web-programming"]

[lib]
name = "guard_agent_rs"
